# CP-archive

./: .gitignore  1684.cpp  CMakeLists.txt  CommentParser.cpp  README.md  destroy.cpp  discard.cpp  elbow.cpp  geography.cpp  knight copy.cpp  next.cpp  perfect  perfect.cpp  search.cpp  segtree.txt  sus  test.cpp  test1  text.cpp  thread_tern.cpp  treesales.cpp  word.cpp
103091/: A.cpp  B(2).cpp  B.cpp  C.cpp  C2.cpp  D.cpp  E.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp
1706/: A.cpp  B.cpp  C.cpp  D.cpp  template.cpp
1712/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
1713/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  asdfsadf.cpp  where.cpp
1715/: A.cpp  B.cpp  C.cpp  D.cpp  Dslow.cpp
1717/: A.cpp  B.cpp  C.cpp  D.cpp
1719/: A.cpp  B.cpp  C.cpp
1720/: A.cpp  B.cpp  C.cpp
1721/: A.cpp  B.cpp  C.cpp  D.cpp  D2.cpp  D3.cpp  E.cpp
AC/: dp_a.cpp
AOC/: 01.cpp  18.cpp  5.cpp
C3/: cartoonist.cpp  error.cpp  prime.cpp  promotion.cpp  railroad.cpp  snooze.cpp  squish.cpp  template.cpp  whichperm.cpp
C4/: blackwhite.cpp  carnicero.cpp  carpet.cpp  dealing.cpp  stars.cpp  template.cpp  travel.cpp  warning.cpp  warning_bad.cpp
C5/: block.cpp  car.cpp  coffee.cpp  split.cpp  template.cpp  tiles.cpp  valet.cpp  vroom.cpp  wand.cpp
CF/: 1033B.cpp  1038B.cpp  1038B_2.cpp  1066E.cpp  1119A.cpp  1220D.cpp  1263C.cpp  1285D.cpp  1321A.cpp  1354C2.cpp  1370B.cpp  1430E.cpp  1451A.cpp  1470B.cpp  1472D.cpp  149C.cpp  1511B.cpp  1530E.cpp  1538B.cpp  1538C.cpp  1553B.cpp  1579B.cpp  1599C.cpp  1599C2.cpp  1618B.cpp  1654D.cpp  1656D.cpp  1676F.cpp  1705C.cpp  1716A.cpp  1718A2.cpp  1732A.cpp  1777A.cpp  1777B.cpp  1777C.cpp  2007A.cpp  2007B.cpp  2007C.cpp  2007D.cpp  2027B.cpp  (+21 more)
CSES/: 1137.cpp
FBHC/2021/: ChainBlock.cpp
FBHC/2022/Qual/: A.cpp  B.cpp  a.out  out.txt
FBHC/practice/: A1  A1.cpp  a.out
Random CF/: 10.cpp  103109A.cpp  4.cpp  5.cpp  7.cpp  stat.cpp
UCF Archives/: 1684.cpp  CSES1671.cpp  cheer.cpp  cookie.cpp  discard.cpp  elbow.cpp  excellence.cpp  knight.cpp  ksums.cpp  ladder.cpp  party.cpp  racinggems.cpp  relatives.cpp  test1.cpp  thread.cpp  treesales.cpp
USACO/Gold/: 1185.cpp  1185old.cpp  1209.cpp  1209butitactuallyworks.cpp  1209faster.cpp  1210.cpp  1210better.cpp  1210faster.cpp  1211.cpp  1234.cpp  1235.cpp  1235new.cpp  1245.cpp  1246.cpp  1258.cpp  1259.cpp  1269.cpp  1271.cpp  1281.cpp  1282.cpp  test.cpp
USACO/Gold/contest/: 1293.cpp  1294.cpp
USACO/Plat/: 1238.cpp
kickstart/: A.cpp  B.cpp  C.cpp  D.cpp  test.cpp
new/: 1066F.cpp  1868B1.cpp  codejamTest.cpp  er.cpp  huh.cpp  uselessbutfun.cpp
new/CF/: 1287B.cpp  1461C.cpp  1514C.cpp  1717A.cpp  1905A.cpp  1917A.cpp  1917B.cpp  1918A.cpp  1918B.cpp  1918C.cpp  1918D.cpp  1920A.cpp  1920B.cpp  1922A.cpp  1922B.cpp  1922C.cpp  1922D.cpp  1925A.cpp  1925B.cpp  1925C.cpp  1925D.cpp  1928A.cpp  1928B.cpp  1928C.cpp  2024A.cpp  2024B.cpp  2024C.cpp  2024D.cpp  2027A.cpp  2027C.cpp  2027D1.cpp  547B.cpp  asdf.cpp  h.cpp  lmao.cpp  recursiveinlinefunctions.cpp
new/CSES/: 1142.cpp
new/cogniterra/: 1.4.cpp  1.5.cpp  2.1.cpp  3.1.cpp  4.1.cpp  4.11.cpp  4.11.h  4.3.cpp  4.3.h  4.7.cpp  5.1.cpp  5.1copy.cpp  5.2.cpp  6.1.cpp  aaaaa.cpp  blosum.cpp  help me.cpp  idk.cpp  main.cpp  merged-1.txt  meth.cpp  pset2.cpp  rbuh.cpp  theory4.cpp  theory7.cpp  yup.cpp
new/leetcode/: 2851.cpp
perfect.dSYM/Contents/Resources/DWARF/: perfect
practice/: A.cpp  a.out  cactus.cpp  case_1.out  case_10.out  case_11.out  case_12.out  case_13.out  case_14.in  case_14.out  case_15.in  case_15.out  case_3.out  case_4.out  case_5.in  case_5.out  case_6.in  case_6.out  case_7.in  case_7.out  case_8.in  case_8.out  case_9.in  case_9.out  comedyshow.cpp  discord.cpp  foerst.cpp  longestlife.cpp  median.cpp  raffle.cpp  sleepy.cpp  treerotations.cpp
practice/uncertainty-data/: .grader.sh.swp  1.in  1.out  10  10.in  11  11.in  12  12.in  13  13.in  14  14.in  15  15.in  16  16.in  17  17.in  18  18.in  19  19.in  2  2.in  20  20.in  21  21.in  22  22.in  23  23.in  24  24.in  25  25.in  26  26.in  27  (+19 more)
sus.dSYM/Contents/: Info.plist
sus.dSYM/Contents/Resources/DWARF/: sus
test1.dSYM/Contents/Resources/DWARF/: test1
treerotation-data/: 1.in  1.out  2.in  2.out  3.in  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  sample.in
