cmake_minimum_required(VERSION 3.22)
project(UCF)

#set(CMAKE_CXX_STANDARD 17)
#stack-size=4194304
MATH(EXPR stack_size "16 * 1024 * 1024") # 16 Mb
#set(CMAKE_EXE_LINKER_FLAGS "-Wl,--stack,${stack_size}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-stack_size -Wl,3ff0000")
set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -Wl")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,stack-size=1000000")

include_directories(.)
include_directories(1706)
include_directories(C3)
include_directories(C4)
include_directories(C5)
include_directories(practice)

add_executable(discard "UCF Archives/discard.cpp")
add_executable(elbow "UCF Archives/elbow.cpp")
add_executable(excellence "UCF Archives/excellence.cpp")
add_executable(geography "UCF Archives/geography.cpp")
add_executable(knight "UCF Archives/knight.cpp")

add_executable(treerotations practice/treerotations.cpp)
add_executable(cookie "UCF Archives/cookie.cpp")



add_executable(cactus practice/cactus.cpp)


add_executable(103109A "Random CF/103109A.cpp")

add_executable(foerst practice/foerst.cpp)




add_executable(discord practice/discord.cpp)

add_executable(sleepy practice/sleepy.cpp)
add_executable(longestlife practice/longestlife.cpp)
add_executable(comedyshow practice/comedyshow.cpp)
add_executable(uncertainty practice/uncertainty-data/uncertainty.cpp)
add_executable(raffle practice/raffle.cpp)
add_executable(median practice/median.cpp)



add_executable(C kickstart/C.cpp)
add_executable(G 103091/G.cpp)
add_executable(A kickstart/A.cpp)
add_executable(E 1721/E.cpp)
add_executable(F 103091/F.cpp)
add_executable(H 103091/H.cpp)
add_executable(K 103091/K.cpp)
add_executable(L 103091/L.cpp)
add_executable(N 103091/N.cpp)

add_executable(D kickstart/D.cpp)
add_executable(J 103091/J.cpp)
add_executable(I 103091/I.cpp)


add_executable(671A CF/671A.cpp)
add_executable(280A CF/280A.cpp)

add_executable(where 1713/where.cpp)

add_executable(B kickstart/B.cpp)
add_executable(C2 103091/C2.cpp)
add_executable(1354C2 CF/1354C2.cpp)
add_executable(1716A CF/1716A.cpp)
add_executable(1370B CF/1370B.cpp)
add_executable(1263C CF/1263C.cpp)
add_executable(1033B CF/1033B.cpp)
add_executable(1119A CF/1119A.cpp)
add_executable(1579B CF/1579B.cpp)
add_executable(1038B CF/1038B.cpp)
add_executable(1038B_2 CF/1038B_2.cpp)

add_executable(1430E CF/1430E.cpp)
add_executable(533B CF/533B.cpp)
add_executable(1530E CF/1530E.cpp)

add_executable(1599C CF/1599C.cpp)
add_executable(1599C2 CF/1599C2.cpp)
add_executable(1654D CF/1654D.cpp)

add_executable(1451A CF/1451A.cpp)
add_executable(843B CF/843B.cpp)
add_executable(1472D CF/1472D.cpp)

add_executable(Dslow 1715/Dslow.cpp)
add_executable(1618B CF/1618B.cpp)
add_executable(260A CF/260A.cpp)
add_executable(1656D CF/1656D.cpp)
add_executable(5C CF/5C.cpp)
add_executable(5.2 new/cogniterra/5.2.cpp)
add_executable(1470B CF/1470B.cpp)
add_executable(259A CF/259A.cpp)
add_executable(1285D CF/1285D.cpp)
add_executable(1220D CF/1220D.cpp)
add_executable(1066E CF/1066E.cpp)
add_executable(149C CF/149C.cpp)
add_executable(914D CF/914D.cpp)
add_executable(820B CF/820B.cpp)
add_executable(356A CF/356A.cpp)

add_executable(D2 1721/D2.cpp)
add_executable(D3 1721/D3.cpp)
add_executable(1511B CF/1511B.cpp)
add_executable(A1 FBHC/practice/A1.cpp)

add_executable(1321A CF/1321A.cpp)
add_executable(914D2 CF/914D2.cpp)
add_executable(1553B CF/1553B.cpp)
add_executable(315B CF/315B.cpp)
add_executable(1705C CF/1705C.cpp)
add_executable(1235 USACO/Gold/1235.cpp)
add_executable(220B CF/220B.cpp)
add_executable(220B2 CF/220B2.cpp)
add_executable(220B3 CF/220B3.cpp)
add_executable(CommentParser CommentParser.cpp)

add_executable(text text.cpp)
add_executable(1538B CF/1538B.cpp)
add_executable(ChainBlock FBHC/2021/ChainBlock.cpp)
add_executable(1538C CF/1538C.cpp)
add_executable(1676F CF/1676F.cpp)
add_executable(1238 USACO/Plat/1238.cpp)
add_executable(1732A CF/1732A.cpp)
add_executable(test USACO/Gold/test.cpp)

add_executable(1718A2 CF/1718A2.cpp)
add_executable(4 "Random CF/4.cpp")
add_executable(5 AOC/5.cpp)
add_executable(7 "Random CF/7.cpp")
add_executable(10 "Random CF/10.cpp")
add_executable(01 AOC/01.cpp)

add_executable(18 AOC/18.cpp)
add_executable(1245 USACO/Gold/1245.cpp)
add_executable(1246 USACO/Gold/1246.cpp)
add_executable(stat "Random CF/stat.cpp")
add_executable(stat_test CF/stat_test.cpp)
add_executable(stat_test2 CF/stat_test2.cpp)

add_executable(1210 USACO/Gold/1210.cpp)
add_executable(1210better "USACO/Gold/1210better.cpp")


add_executable(1210faster USACO/Gold/1210faster.cpp)
add_executable(1209 USACO/Gold/1209.cpp)
add_executable(1211 USACO/Gold/1211.cpp)
add_executable(1777A CF/1777A.cpp)
add_executable(1777B CF/1777B.cpp)
add_executable(1777C CF/1777C.cpp)
add_executable(1269 USACO/Gold/1269.cpp)
add_executable(1271 USACO/Gold/1271.cpp)
add_executable(1258 USACO/Gold/1258.cpp)
add_executable(1281 USACO/Gold/1281.cpp)
add_executable(1282 USACO/Gold/1282.cpp)
add_executable(1259 USACO/Gold/1259.cpp)
add_executable(1234 USACO/Gold/1234.cpp)
add_executable(1235new USACO/Gold/1235new.cpp)
add_executable(1209faster USACO/Gold/1209faster.cpp)
add_executable(1209butitactuallyworks USACO/Gold/1209butitactuallyworks.cpp)
add_executable(1185old USACO/Gold/1185old.cpp)
add_executable(1137 CSES/1137.cpp)
add_executable(1294 USACO/Gold/contest/1294.cpp)
add_executable(1293 USACO/Gold/contest/1293.cpp)
add_executable(dp_a AC/dp_a.cpp)
add_executable(1185 USACO/Gold/1185.cpp)

add_executable(1925A new/CF/1925A.cpp)
add_executable(1868B1 new/1868B1.cpp)
add_executable(1925B new/CF/1925B.cpp)
add_executable(1925C new/CF/1925C.cpp)
add_executable(pset2 new/cogniterra/pset2.cpp)
add_executable(1922A new/CF/1922A.cpp)
add_executable(1922B new/CF/1922B.cpp)
add_executable(1922C new/CF/1922C.cpp)
add_executable(1922D new/CF/1922D.cpp)
add_executable(1920A new/CF/1920A.cpp)
add_executable(1918A new/CF/1918A.cpp)
add_executable(1918B new/CF/1918B.cpp)
add_executable(1918C new/CF/1918C.cpp)
add_executable(1918D new/CF/1918D.cpp)
add_executable(1917A new/CF/1917A.cpp)
add_executable(1917B new/CF/1917B.cpp)
add_executable(547B new/CF/547B.cpp)
add_executable(1920B new/CF/1920B.cpp)
add_executable(1142 new/CSES/1142.cpp)
add_executable(1928A new/CF/1928A.cpp)
add_executable(1928B new/CF/1928B.cpp)
add_executable(1928C new/CF/1928C.cpp)
add_executable(1905A new/CF/1905A.cpp)
add_executable(1717A new/CF/1717A.cpp)
add_executable(1514C new/CF/1514C.cpp)
add_executable(1461C new/CF/1461C.cpp)
add_executable(1287B new/CF/1287B.cpp)
add_executable(2.1 new/cogniterra/2.1.cpp)
add_executable(3.1 new/cogniterra/3.1.cpp)
add_executable(4.1 new/cogniterra/4.1.cpp)


add_executable(4.3 new/cogniterra/4.3.cpp)
add_executable(4.7 new/cogniterra/4.7.cpp)
add_executable(rbuh new/cogniterra/rbuh.cpp)
add_executable(theory4 new/cogniterra/theory4.cpp)
add_executable(2851 new/leetcode/2851.cpp)
add_executable(5.1 new/cogniterra/5.1.cpp)
add_executable(5.1copy new/cogniterra/5.1copy.cpp)

add_executable(aaaaa new/cogniterra/aaaaa.cpp)
add_executable(theory7 new/cogniterra/theory7.cpp)
add_executable(idk new/cogniterra/idk.cpp)
add_executable(6.1 new/cogniterra/6.1.cpp)
add_executable(meth new/cogniterra/meth.cpp)
add_executable(yup new/cogniterra/yup.cpp)
add_executable(blosum new/cogniterra/blosum.cpp)
add_executable(2939 CF/2939.cpp)
add_executable(2007A CF/2007A.cpp)
add_executable(2007B CF/2007B.cpp)
add_executable(2007C CF/2007C.cpp)
add_executable(2007D CF/2007D.cpp)
add_executable(1925D new/CF/1925D.cpp)
add_executable(2024A new/CF/2024A.cpp)
add_executable(2024B new/CF/2024B.cpp)
add_executable(2024D new/CF/2024D.cpp)
add_executable(2027B CF/2027B.cpp)
add_executable(2027C new/CF/2027C.cpp)
add_executable(2027A new/CF/2027A.cpp)
add_executable(2027D1 new/CF/2027D1.cpp)
add_executable(2024C new/CF/2024C.cpp)
add_executable(recursiveinlinefunctions new/CF/recursiveinlinefunctions.cpp)